Update test jvmArgs